courses/430_programming-languages/assignment-6/tests/error/hw4_error19.correct
operator '+' requires int * int or string * string, found int * bool
